@@ -280,11 +280,6 @@ module Sequel
         end
       end
 
-      # SQLite does not need to specify AUTOINCREMENT, integer primary keys are automatically auto incrementing.
-      def auto_increment_sql
-        ''
-      end
-
       def begin_new_transaction(conn, opts)
         mode = opts[:mode] || @transaction_mode
         sql = TRANSACTION_MODE[mode] or raise Error, "transaction :mode must be one of: :deferred, :immediate, :exclusive, nil"
@@ -351,6 +346,7 @@ module Sequel
         cols.each do |c|
           c[:default] = LiteralString.new(c[:default]) if c[:default]
           c[:type] = c[:db_type]
+          c.delete(:auto_increment)
         end
         cols
       end
